# stress_table

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml
app/: Cargo.toml  askama.toml
app/sql/: add_user.sql  get_user.sql  get_users.sql  schema.sql
app/src/: check_login.rs  config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main  main.rs  models.rs  templates.rs
app/src/auxiliary/: auxiliary_structs.rs  mod.rs
app/src/components/: canvas.rs  elements_menu.rs  mod.rs  nodes_menu.rs
app/src/fe/: fe_aux_structs.rs  mod.rs  node.rs  solver.rs
app/src/fe/elements/: element.rs  truss.rs
app/src/math/: aux_structs.rs  aux_traits.rs  math_aux_structs.rs  math_aux_traits.rs  matrix.rs  mod.rs  vector.rs
app/web_layout/: auth.html  index.html
app/web_layout/css/: all_results_table.css  analysis_type_menu.css  auth.css  canvas.css  displacement_menu.css  element_menu.css  elements_menu.css  force_menu.css  index.css  node_menu.css  nodes_menu.css  plot_displacements_menu.css  plot_forces_menu.css  plot_strains_menu.css  plot_stresses_menu.css  postprocessor_canvas.css  preprocessor_canvas.css  result_view_menu.css  view_menu.css
app/web_layout/js/: auth.js  index.js
app/web_layout/js/auth_components/: auth-create-account-menu.js  auth-sign-in-menu.js
app/web_layout/js/common_components/: hiding-content-button.js
app/web_layout/js/components/: fea-analysis.js  fea-app-menu-bar.js  fea-app-navbar.js  fea-app-title-bar.js  fea-app-tool-bar.js  fea-app.js  fea-boundary-condition.js  fea-displacement.js  fea-element.js  fea-geometry.js  fea-load.js  fea-mesh.js  fea-node.js  fea-plot-displacements.js  fea-plot-forces.js  fea-plot-strains.js  fea-plot-stresses.js  fea-postprocessor-menu-buttons.js  fea-postprocessor-menu.js  fea-postprocessor.js  fea-preprocessor-canvas.js  fea-preprocessor-menu-buttons.js  fea-preprocessor-menu.js  fea-preprocessor.js  fea-properties.js  fea-renderer.js  postprocessor_canvas.js  preprocessor_canvas.js
app/web_layout/js/js_modules/: actions_router_to_wasm_modules_communicator.js  communicator_with_app.js  communicator_with_fe_model.js  communicator_with_geometry.js  communicator_with_properties.js
app/web_layout/js/wasm_js_interface_modules/: actions_router_initialization.js  renderer_initialization.js
app/web_layout/js/wasm_modules_initialization/: fe_model_initialization.js  geometry_initialization.js  properties_initialization.js  renderer_post_initialization.js
wasm_modules/actions_router/: Cargo.toml
wasm_modules/actions_router/js/: actions_router_to_wasm_modules_communicator_interface.js  interface_to_communicate_with_fe_model.js  interface_to_communicate_with_geometry.js  interface_to_communicate_with_properties.js
wasm_modules/actions_router/src/: action.rs  communication_with_geometry.rs  consts.rs  handles_for_geometry_type_actions.rs  lib.rs  methods_for_boundary_condition_type_actions_handle.rs  methods_for_geometry_type_actions_handle.rs  methods_for_loads_type_actions_handle.rs  methods_for_properties_type_actions_handle.rs  types.rs
wasm_modules/actions_router/src/external_functions/: common.rs  communication_with_boundary_conditions.rs  communication_with_geometry.rs  communication_with_loads.rs  communication_with_postprocessor.rs  communication_with_preprocessor.rs  communication_with_properties.rs  communication_with_solver.rs  mod.rs
wasm_modules/fe_model/: Cargo.toml
wasm_modules/fe_model/src/: consts.rs  functions.rs  lib.rs  methods_for_postprocessor_data_handle.rs  methods_for_preprocessor_data_handle.rs  my_float.rs  types.rs
wasm_modules/fe_model/src/extended_matrix/: extended_matrix.rs  functions.rs  mod.rs
wasm_modules/fe_model/src/fe_solver/: consts.rs  fe_solver.rs  mod.rs
wasm_modules/fe_model/src/postprocessor/: analysis_result.rs  consts.rs  mod.rs  postprocessor.rs
wasm_modules/fe_model/src/preprocessor/: functions.rs  methods_for_boundary_conditions_data_handle.rs  methods_for_geometry_data_handle.rs  methods_for_loads_data_handle.rs  methods_for_properties_data_handle.rs  mod.rs  preprocessor.rs  traits.rs
wasm_modules/geometry/: Cargo.toml
wasm_modules/geometry/js/: interface_to_communicate_geometry_with_app.js
wasm_modules/geometry/src/: lib.rs  line.rs  methods_for_line_data_handle.rs  methods_for_point_data_handle.rs  point.rs
wasm_modules/renderer/: Cargo.toml
wasm_modules/renderer/src/: aux_functions.rs  aux_structs.rs  buffer_objects.rs  buffers.rs  concentrated_load.rs  concentrated_load_object.rs  consts.rs  distributed_line_load.rs  drawn_object.rs  functions.rs  lib.rs  line_object.rs  methods_for_boundary_condition_crud.rs  methods_for_canvas_manipulation.rs  methods_for_concentrated_load_crud.rs  methods_for_distributed_line_load_crud.rs  methods_for_line_object_crud.rs  methods_for_point_object_crud.rs  methods_for_scene_objects_data_handle.rs  methods_for_scene_objects_visibility_manipulation.rs  point_object.rs  scene.rs  shader_programs.rs  shaders_variables.rs  types.rs
wasm_modules/renderer/src/buffers/: buffers.rs
yew_app/: Cargo.toml
yew_app/src/: color.py  counter.py  lib.rs  main.rs  route.rs
yew_app/src/auxiliary/: aux_functions.rs  aux_structs.rs  auxiliary_structs.rs  gl_aux_functions.rs  gl_aux_structs.rs  mod.rs
yew_app/src/components/: all_results_table.rs  analysis_type_menu.rs  canvas.rs  displacement_menu.rs  element_menu.rs  elements_menu.rs  force_menu.rs  mod.rs  node_menu.rs  nodes_menu.rs  plot_displacements_menu.rs  plot_forces_menu.rs  plot_strains_menu.rs  plot_stresses_menu.rs  postprocessor_canvas.rs  preprocessor_canvas.rs  preprocessor_canvas_old.rs  result_view_menu.rs  supports_menu.rs  view_menu.rs
yew_app/src/extended_matrix/: aux_functions_extended_matrix.rs  extended_matrix.rs  mod.rs
yew_app/src/fe/: fe_aux_structs.rs  fe_solver.rs  mod.rs  node.rs
yew_app/src/fe/elements/: element.rs  (+2 more)
yew_app/src/fem/: aux_functions_fe_model.rs  fe_model.rs  mod.rs
yew_app/src/math/: math_aux_structs.rs  math_aux_traits.rs  matrix.rs  vector.rs
yew_app/src/pages/: mod.rs  postprocessor.rs  preprocessor.rs
(+175 files in other folders)
