[package]
name = "stress_table_app"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.69"
js-sys = "0.3.46"


[dependencies.web-sys]
version = "0.3.46"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'HtmlSelectElement',
  'HtmlOptionsCollection',
  'HtmlOptionElement',
  'DomTokenList',
  'HtmlInputElement',
]
