[package]
name = "stress_table_app"
version = "0.1.0"
authors = ["ROMAN <roman.a.shushakov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-service = "1.0.6"
futures = "0.3.15"
env_logger = "0.8.3"

actix-redis = "0.9.1"
actix-session = "0.4.1"
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
