[package]
name = "stress_table_app"
version = "0.2.0"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-service = "1.0.6"
futures = "0.3.15"
env_logger = "0.8.3"
dotenv = "0.15.0"

actix-redis = "0.9.1"
actix-session = "0.4.1"
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8"] }
deadpool-postgres = "0.5.6"
tokio-pg-mapper = "0.1.8"
tokio-pg-mapper-derive = "0.1.5"
config = "0.11.0"
derive_more = "0.99.14"

uuid = { version = "0.8.2", features = ["serde", "v4"] }
rust-crypto = "0.2.36"

askama = "0.10.5"
