[package]
name = "stress_table_yew_app"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#panic = 'abort'
#codegen-units = 1
#opt-level = 's'
#lto = true


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.72"
js-sys = "0.3.49"
mat4 = "0.2.1"
vec4 = "0.2.1"
yew-router = "0.14.0"

#wee_alloc = "0.4.5"


[dependencies.web-sys]
version = "0.3.49"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'HtmlSelectElement',
  'HtmlOptionsCollection',
  'HtmlOptionElement',
  'DomTokenList',
  'HtmlInputElement',
  'CanvasGradient',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'DomRect',
  'DomRectReadOnly',
  'CanvasGradient',
#  'WebGlContextAttributes'
]
