[package]
name = "actions_router"
version = "0.2.0"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
#opt-level = "s"
lto = true


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
js-sys = "0.3.53"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
wasm-bindgen-futures = "0.4.26"
serde_derive = "1.0.130"


[dependencies.web-sys]
version = "0.3.53"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

