[package]
name = "fe_model"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
extended_matrix = "0.2.12"
finite_element_method = "0.2.6"
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
js-sys = "0.3.53"


[dependencies.web-sys]
version = "0.3.53"
features = [
  'Document',
  'Window',
  'Element',
  'CustomEvent',
  'CustomEventInit',
  'EventTarget'
]
