[package]
name = "geometry"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"


[dependencies.web-sys]
version = "0.3.50"
features = [
  'Document',
  'Window',
  'Element',
  'CustomEvent',
  'CustomEventInit',
  'EventTarget'
]