[package]
name = "renderer"
version = "0.2.0"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
extended_matrix = "0.2.4"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
js-sys = "0.3.51"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
mat4 = "0.2.1"
vec4 = "0.2.1"
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'WebGlUniformLocation',
  'CanvasRenderingContext2d',
  'CustomEvent',
  'CustomEventInit',
  'EventTarget'
]
